css overflow bug with latest nw version

--- a/css/light.css
+++ b/css/light.css
@@ -1,5 +1,5 @@
 html{height:100%}
-body{background:#ddd;color:#333;margin:0;height:100%;vertical-align:top}
+body{background:#ddd;color:#333;margin:0;height:100%;vertical-align:top;overflow:hidden}
 #tabs{position:absolute;top:5%;left:0;white-space:nowrap;overflow-Y:hidden;overflow-X:hidden;font-family:Arial;font-size:.9em;line-height:1.5em;height:2em;width:99%;z-index:10;margin:-1.5em .5% 0 .5%;}
 #tabs:hover{overflow-X:auto}
 #tabs:before{content:"";position:absolute;top:1.5em;display:block;border-bottom:solid #767676 1px;height:0;width:100%;z-index:1}
